@@ -1,5 +1,12 @@
+2021. 5. 9. Modified specification of zBDisk2D. [zeo_bv2d_bdisk]
+2021. 5. 9. Modified specification of zVec2DAddrListCreate. [zeo_vec2d_list]
+2021. 5. 9. Modified specification of zBBall3D. [zeo_bv3d_bball]
+2021. 5. 9. Modified specification of _zPH3DSweepBottom, zPH3DPrism and zPH3DPyramid. [zeo_ph]
+2021. 5. 9. Modified specification of zTriangulate. [zeo_elem3d_list]
+2021. 5. 9. Modified specification of zVec3DAddrListCreate and zLoop3DCreate. [zeo_vec3d_list, zeo_elem3d_list]
+2021. 5. 9. Added zVec3DAddrListAppendArray. [zeo_vec3d_list]
 2021. 5. 8. Reflected -ansi option of zeda-makefile-gen. [app]
-2021. 5. 7. Made tools/, and modified makefiles. [zm, app, tools]
+2021. 5. 7. Made tools/, and modified makefiles. [makefile, app, tools]
 2021. 5. 7. Renamed zBDisk to zBDisk2D. [zeo_bv2d_bdisk]
 2021. 5. 7. Renamed zBBall* to zBBall3D*. [zeo_bv3d_bball, zeo_mshape3d]
 2021. 5. 7. Renamed zAABB* to zAABB3D*. [zeo_bv3d_aabb, zeo_col_box]
